--- a/ijklibrary/src/main/res/layout/cm_videoview_control.xml
+++ b/ijklibrary/src/main/res/layout/cm_videoview_control.xml
@@ -59,7 +59,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1.0"
             android:background="@null"
-            android:max="100"
+            android:max="1000"
             android:maxHeight="1dp"
             android:minHeight="1dp"
             android:paddingBottom="8dp"
@@ -94,10 +94,8 @@
         android:layout_width="match_parent"
         android:layout_height="1.5dp"
         android:layout_alignParentBottom="true"
-        android:max="100"
-        android:progress="50"
-        android:progressDrawable="@drawable/cm_bottom_progress"
-        android:visibility="gone"/>
+        android:max="1000"
+        android:progressDrawable="@drawable/cm_bottom_progress" />
 
 
     <ProgressBar
